// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager Check confirm 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <!---->
     
    <div
      class="v-card__text body-1 py-2 pt-4"
    >
      test
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="spacer"
      />
       
      <button
        action-key="ok"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  ok
  
          <!---->
        </span>
      </button>
      <button
        action-key="cancel"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  cancel
  
          <!---->
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`manager Check confirm with action icons 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <!---->
     
    <div
      class="v-card__text body-1 py-2 pt-4"
    >
      test
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="spacer"
      />
       
      <button
        action-key="false"
        class="v-btn v-btn--contained v-btn--rounded theme--light v-size--default info"
        color="info"
        rounded="true"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
            text="cancel"
          >
            cancel
          </i>
          
  No
  
          <!---->
        </span>
      </button>
      <button
        action-key="true"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  Yes
  
          <i
            aria-hidden="true"
            class="v-icon notranslate v-icon--right material-icons theme--light"
            text="success"
          >
            success
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`manager Check confirm with btns true|false 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <!---->
     
    <div
      class="v-card__text body-1 py-2 pt-4"
    >
      test
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="spacer"
      />
       
      <button
        action-key="true"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  Yes
  
          <!---->
        </span>
      </button>
      <button
        action-key="false"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  No
  
          <!---->
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`manager Check confirm with handler functions 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <!---->
     
    <div
      class="v-card__text body-1 py-2 pt-4"
    >
      test
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="spacer"
      />
       
      <button
        action-key="false"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  No
  
          <!---->
        </span>
      </button>
      <button
        action-key="true"
        class="v-btn v-btn--contained theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <!---->
          
  Yes
  
          <!---->
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`manager Returnable 1`] = `
<div
  class="dialog-layout"
>
  <p />
</div>
`;

exports[`manager Test confirm without icon 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <header
      class="v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat"
      style="height: 48px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 48px;"
      >
        <!---->
         
        <div
          class="v-toolbar__title"
        >
          
      Title
    
        </div>
      </div>
    </header>
     
    <div
      class="v-card__text body-1 py-2"
    >
      Test confirmation withot icon
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`manager Test default confirm 1`] = `
<div
  class="dialog-layout"
>
  <div
    class="v-card v-sheet theme--light rounded-0"
  >
    <header
      class="v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat"
      style="height: 48px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 48px;"
      >
        <!---->
         
        <div
          class="v-toolbar__title"
        >
          
      Title
    
        </div>
      </div>
    </header>
     
    <div
      class="v-card__text body-1 py-2"
    >
      Test confirmation
    </div>
     
    <!---->
  </div>
</div>
`;
